# aoc_tomato_farm

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
dogtooth/dogtooth_msgs/: CMakeLists.txt  package.xml
dogtooth/dogtooth_msgs/msg/: SensorState.msg
dogtooth/dogtooth_node/: CMakeLists.txt  package.xml
dogtooth/dogtooth_node/include/dogtooth_node/: diff_drive_controller.hpp  dogtooth.hpp  odometry.hpp
dogtooth/dogtooth_node/src/: diff_drive_controller.cpp  dogtooth.cpp  node_main.cpp  odometry.cpp
dogtooth/dogtooth_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
dogtooth/dogtooth_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
gazebo_tomato_farm_generator/: CMakeLists.txt  package.xml
gazebo_tomato_farm_generator/scripts/: tomato_gen_Gazebo_Sim_and_Classic (copy).ipynb  tomato_gen_Gazebo_Sim_and_Classic.ipynb
gazebo_tomato_farm_generator/scripts/.ipynb_checkpoints/: tomato_gen-checkpoint.ipynb  tomato_gen_Gazebo_Sim_and_Classic-checkpoint.ipynb
gazebo_tomato_farm_generator/templates/tomato_world_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/: CMakeLists.txt  package.xml
gz_tomato_farm_generator/blender/: tomato_gen.py
gz_tomato_farm_generator/scripts/: glass_house_generator.ipynb  tomato_gen_Gazebo_Sim_and_Classic.ipynb
gz_tomato_farm_generator/scripts/.ipynb_checkpoints/: glass_house_generator-checkpoint.ipynb
gz_tomato_farm_generator/templates/flowerpot_model_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/templates/lamp_model_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/templates/metal_model_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/templates/soilbed_model_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/templates/structure_model_gazebo_classic_and_sim/: cookiecutter.json
gz_tomato_farm_generator/templates/tomato_model_gazebo_classic_and_sim/: cookiecutter.json
tomato_farm_generator/: CMakeLists.txt  package.xml
tomato_farm_generator/blender/: tomato_gen.py
tomato_farm_generator/scripts/: tomato_gen_Gazebo_Sim_and_Classic.ipynb
tomato_farm_generator/scripts/.ipynb_checkpoints/: tomato_gen_Gazebo_Sim_and_Classic-checkpoint.ipynb
tomato_farm_simulator/: CMakeLists.txt  package.xml
tomato_farm_simulator/launch/: GazeboxUnity.launch.py  gazebo_mobile_manipulator.launch.py  gazebo_tomato_farm.launch.py  robot_state_publisher.launch.py  tomato_farm_world.launch.py  tomato_farm_world_.launch.py  tomato_farm_world_mobile_manipulator_001.launch.py  unity_Launch.py
tomato_farm_simulator/models/12mx9m/tomato_14/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_17/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_27/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_28/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_3/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_31/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_32/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_33/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_34/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_35/: markers.json  model.sdf
tomato_farm_simulator/models/12mx9m/tomato_36/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_37/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_38/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_4/: markers.json
tomato_farm_simulator/models/12mx9m/tomato_8/: model.sdf
tomato_farm_simulator/models/12mx9m/tomato_9/: markers.json
tomato_farm_simulator/models/22mx14m/: markers.json
tomato_farm_simulator/models/22mx14m/tomato_0/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_100/: model.config  model.sdf
tomato_farm_simulator/models/22mx14m/tomato_104/: model.config
tomato_farm_simulator/models/22mx14m/tomato_106/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_107/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_110/: model.config
tomato_farm_simulator/models/22mx14m/tomato_113/: model.config
tomato_farm_simulator/models/22mx14m/tomato_118/: model.config
tomato_farm_simulator/models/22mx14m/tomato_12/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_121/: markers.json  model.sdf
tomato_farm_simulator/models/22mx14m/tomato_123/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_124/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_128/: model.config
tomato_farm_simulator/models/22mx14m/tomato_129/: model.config
tomato_farm_simulator/models/22mx14m/tomato_13/: model.config
tomato_farm_simulator/models/22mx14m/tomato_131/: model.config  model.sdf
tomato_farm_simulator/models/22mx14m/tomato_136/: markers.json  model.config
tomato_farm_simulator/models/22mx14m/tomato_137/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_138/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_139/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_141/: model.config
tomato_farm_simulator/models/22mx14m/tomato_144/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_145/: model.config
tomato_farm_simulator/models/22mx14m/tomato_149/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_15/: model.config
tomato_farm_simulator/models/22mx14m/tomato_16/: model.config
tomato_farm_simulator/models/22mx14m/tomato_2/: model.sdf
tomato_farm_simulator/models/22mx14m/tomato_22/: model.sdf
tomato_farm_simulator/models/4mx6m/: markers.json
tomato_farm_simulator/urdf/: urdfbot_simple.urdf
tomato_farm_simulator/urdf/{{cookiecutter.modelS_name}}/: model.config  model.sdf
tomato_farm_simulator/worlds/12mx9m/: tomato_farm_12mx9m_gazebo_classic.world
tomato_farm_simulator/worlds/22mx14m/: tomato_farm_22mx14m_gazebo_sim.world
tomato_farm_simulator/worlds/4mx3m/: tomato_farm_4mx3m_gazebo_sim.sdf  tomato_farm_4mx3m_gazebo_sim.world
tomato_farm_simulator/worlds/8mx4m/: tomato_farm_8mx4m_gazebo_classic.world  tomato_farm_8mx4m_gazebo_sim.sdf
(+3271 files in other folders)
