<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_tomato_farm_generator</name>
  <version>0.0.0</version>
  <description>This package generates tomato farm data.</description>
  <author email="azazdeaz@gmail.com">azazdeaz</author>
  <author email="espejel41juan@gmail.com">paul</author>
  <author email="yilmazabdurrah@itu.edu.tr">ayilmaz</author>
  
  <maintainer email="espejel41juan@gmail.com">paul</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

