<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomato_farm_simulator</name>
  <version>0.0.0</version>
  <description>Gazebo tomato farm simulator package </description>
  <maintainer email="yilmazabdurrah@itu.edu.tr">ayilmaz</maintainer>
  <author email="yilmazabdurrah@itu.edu.tr">ayilmaz</author>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
