<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomato_farm_simulator</name>
  <version>0.0.0</version>
  <description>Tomato farm/glasshouse simulator package for Gazebo and Unity</description>
  <maintainer email="espejel41juan@gmail.com">paul</maintainer>
  <author email="yilmazabdurrah@gmail.com">ayilmaz</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
