<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dogtooth_msgs</name>
  <version>2.2.3</version>
  <description>
    Message and service types: custom messages and services for Dogtooth packages for ROS2
  </description>
  <maintainer email="GKulathunga@lincoln.ac.uk">Geesara</maintainer>
  <license>Apache 2.0</license>
  <author email="GKulathunga@lincoln.ac.uk">Geesara</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
